gen/JavaplusplusParser.java
// Generated from D:/Y2 - Q3/CompilersIvo/project_files\Javaplusplus.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JavaplusplusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		MATH_OPERATORS=10, COMPARATORS=11, AND_OR=12, SEMICOLON=13, INT=14, BOOL=15, 
		COMMA=16, SBRACKET=17, EBRACKET=18, C_SBRACKET=19, C_EBRACKET=20, VAR_TYPE=21, 
		STRING=22, CHAR=23, WS=24;
	public static final int
		RULE_program = 0, RULE_expression = 1, RULE_variable_init = 2, RULE_variable_method_init = 3, 
		RULE_function_decl = 4, RULE_function_call = 5, RULE_function_call_method = 6, 
		RULE_loop = 7, RULE_print = 8, RULE_check = 9, RULE_ask = 10, RULE_comparable_statement = 11, 
		RULE_return_type = 12, RULE_comparables = 13, RULE_value = 14, RULE_var_name = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "expression", "variable_init", "variable_method_init", "function_decl", 
			"function_call", "function_call_method", "loop", "print", "check", "ask", 
			"comparable_statement", "return_type", "comparables", "value", "var_name"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'return'", "'loop'", "'++'", "'dump'", "'check'", "'otherwise'", 
			"'ask'", "'void'", null, null, null, "';'", null, null, "','", "'('", 
			"')'", "'<<'", "'>>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, "MATH_OPERATORS", 
			"COMPARATORS", "AND_OR", "SEMICOLON", "INT", "BOOL", "COMMA", "SBRACKET", 
			"EBRACKET", "C_SBRACKET", "C_EBRACKET", "VAR_TYPE", "STRING", "CHAR", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Javaplusplus.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JavaplusplusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JavaplusplusParser.EOF, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaplusplusListener ) ((JavaplusplusListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaplusplusListener ) ((JavaplusplusListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaplusplusVisitor ) return ((JavaplusplusVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__4) | (1L << T__5) | (1L << T__7) | (1L << T__8) | (1L << VAR_TYPE) | (1L << STRING))) != 0)) {
				{
				{
				setState(32);
				expression();
				}
				}
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(38);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public Variable_initContext variable_init() {
			return getRuleContext(Variable_initContext.class,0);
		}
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public CheckContext check() {
			return getRuleContext(CheckContext.class,0);
		}
		public Function_declContext function_decl() {
			return getRuleContext(Function_declContext.class,0);
		}
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public AskContext ask() {
			return getRuleContext(AskContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaplusplusListener ) ((JavaplusplusListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaplusplusListener ) ((JavaplusplusListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaplusplusVisitor ) return ((JavaplusplusVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		try {
			setState(47);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				print();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				variable_init();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(42);
				function_call();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(43);
				check();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(44);
				function_decl();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(45);
				loop();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(46);
				ask();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_initContext extends ParserRuleContext {
		public Var_nameContext var_name() {
			return getRuleContext(Var_nameContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(JavaplusplusParser.SEMICOLON, 0); }
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public AskContext ask() {
			return getRuleContext(AskContext.class,0);
		}
		public TerminalNode VAR_TYPE() { return getToken(JavaplusplusParser.VAR_TYPE, 0); }
		public Variable_initContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaplusplusListener ) ((JavaplusplusListener)listener).enterVariable_init(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaplusplusListener ) ((JavaplusplusListener)listener).exitVariable_init(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaplusplusVisitor ) return ((JavaplusplusVisitor<? extends T>)visitor).visitVariable_init(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_initContext variable_init() throws RecognitionException {
		Variable_initContext _localctx = new Variable_initContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variable_init);
		int _la;
		try {
			setState(65);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==VAR_TYPE) {
					{
					setState(49);
					match(VAR_TYPE);
					}
				}

				setState(52);
				var_name();
				setState(53);
				match(T__0);
				setState(59);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(54);
					value();
					setState(55);
					match(SEMICOLON);
					}
					break;
				case 2:
					{
					setState(57);
					function_call();
					}
					break;
				case 3:
					{
					setState(58);
					ask();
					}
					break;
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				match(VAR_TYPE);
				setState(62);
				var_name();
				setState(63);
				match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_method_initContext extends ParserRuleContext {
		public List<TerminalNode> VAR_TYPE() { return getTokens(JavaplusplusParser.VAR_TYPE); }
		public TerminalNode VAR_TYPE(int i) {
			return getToken(JavaplusplusParser.VAR_TYPE, i);
		}
		public List<Var_nameContext> var_name() {
			return getRuleContexts(Var_nameContext.class);
		}
		public Var_nameContext var_name(int i) {
			return getRuleContext(Var_nameContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(JavaplusplusParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JavaplusplusParser.COMMA, i);
		}
		public Variable_method_initContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_method_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaplusplusListener ) ((JavaplusplusListener)listener).enterVariable_method_init(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaplusplusListener ) ((JavaplusplusListener)listener).exitVariable_method_init(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaplusplusVisitor ) return ((JavaplusplusVisitor<? extends T>)visitor).visitVariable_method_init(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_method_initContext variable_method_init() throws RecognitionException {
		Variable_method_initContext _localctx = new Variable_method_initContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable_method_init);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(VAR_TYPE);
			setState(68);
			var_name();
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(69);
				match(COMMA);
				setState(70);
				match(VAR_TYPE);
				setState(71);
				var_name();
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_declContext extends ParserRuleContext {
		public Return_typeContext return_type() {
			return getRuleContext(Return_typeContext.class,0);
		}
		public Var_nameContext var_name() {
			return getRuleContext(Var_nameContext.class,0);
		}
		public TerminalNode SBRACKET() { return getToken(JavaplusplusParser.SBRACKET, 0); }
		public TerminalNode EBRACKET() { return getToken(JavaplusplusParser.EBRACKET, 0); }
		public TerminalNode C_SBRACKET() { return getToken(JavaplusplusParser.C_SBRACKET, 0); }
		public TerminalNode SEMICOLON() { return getToken(JavaplusplusParser.SEMICOLON, 0); }
		public TerminalNode C_EBRACKET() { return getToken(JavaplusplusParser.C_EBRACKET, 0); }
		public List<Variable_method_initContext> variable_method_init() {
			return getRuleContexts(Variable_method_initContext.class);
		}
		public Variable_method_initContext variable_method_init(int i) {
			return getRuleContext(Variable_method_initContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public Function_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaplusplusListener ) ((JavaplusplusListener)listener).enterFunction_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaplusplusListener ) ((JavaplusplusListener)listener).exitFunction_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaplusplusVisitor ) return ((JavaplusplusVisitor<? extends T>)visitor).visitFunction_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_declContext function_decl() throws RecognitionException {
		Function_declContext _localctx = new Function_declContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_function_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			return_type();
			setState(78);
			var_name();
			setState(79);
			match(SBRACKET);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VAR_TYPE) {
				{
				{
				setState(80);
				variable_method_init();
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(86);
			match(EBRACKET);
			setState(87);
			match(C_SBRACKET);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__4) | (1L << T__5) | (1L << T__7) | (1L << T__8) | (1L << VAR_TYPE) | (1L << STRING))) != 0)) {
				{
				{
				setState(88);
				expression();
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(94);
				match(T__1);
				setState(95);
				value();
				}
			}

			setState(98);
			match(SEMICOLON);
			setState(99);
			match(C_EBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_callContext extends ParserRuleContext {
		public Var_nameContext var_name() {
			return getRuleContext(Var_nameContext.class,0);
		}
		public TerminalNode SBRACKET() { return getToken(JavaplusplusParser.SBRACKET, 0); }
		public TerminalNode EBRACKET() { return getToken(JavaplusplusParser.EBRACKET, 0); }
		public TerminalNode SEMICOLON() { return getToken(JavaplusplusParser.SEMICOLON, 0); }
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(JavaplusplusParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JavaplusplusParser.COMMA, i);
		}
		public Function_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaplusplusListener ) ((JavaplusplusListener)listener).enterFunction_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaplusplusListener ) ((JavaplusplusListener)listener).exitFunction_call(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaplusplusVisitor ) return ((JavaplusplusVisitor<? extends T>)visitor).visitFunction_call(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_callContext function_call() throws RecognitionException {
		Function_callContext _localctx = new Function_callContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_function_call);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			var_name();
			setState(102);
			match(SBRACKET);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << STRING))) != 0)) {
				{
				{
				setState(103);
				value();
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(104);
					match(COMMA);
					setState(105);
					value();
					}
					}
					setState(110);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(116);
			match(EBRACKET);
			setState(117);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_call_methodContext extends ParserRuleContext {
		public Var_nameContext var_name() {
			return getRuleContext(Var_nameContext.class,0);
		}
		public TerminalNode SBRACKET() { return getToken(JavaplusplusParser.SBRACKET, 0); }
		public TerminalNode EBRACKET() { return getToken(JavaplusplusParser.EBRACKET, 0); }
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(JavaplusplusParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JavaplusplusParser.COMMA, i);
		}
		public Function_call_methodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_call_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaplusplusListener ) ((JavaplusplusListener)listener).enterFunction_call_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaplusplusListener ) ((JavaplusplusListener)listener).exitFunction_call_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaplusplusVisitor ) return ((JavaplusplusVisitor<? extends T>)visitor).visitFunction_call_method(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_call_methodContext function_call_method() throws RecognitionException {
		Function_call_methodContext _localctx = new Function_call_methodContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_function_call_method);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			var_name();
			setState(120);
			match(SBRACKET);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << STRING))) != 0)) {
				{
				{
				setState(121);
				value();
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(122);
					match(COMMA);
					setState(123);
					value();
					}
					}
					setState(128);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(134);
			match(EBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopContext extends ParserRuleContext {
		public TerminalNode SBRACKET() { return getToken(JavaplusplusParser.SBRACKET, 0); }
		public Variable_initContext variable_init() {
			return getRuleContext(Variable_initContext.class,0);
		}
		public List<Var_nameContext> var_name() {
			return getRuleContexts(Var_nameContext.class);
		}
		public Var_nameContext var_name(int i) {
			return getRuleContext(Var_nameContext.class,i);
		}
		public List<TerminalNode> COMPARATORS() { return getTokens(JavaplusplusParser.COMPARATORS); }
		public TerminalNode COMPARATORS(int i) {
			return getToken(JavaplusplusParser.COMPARATORS, i);
		}
		public TerminalNode SEMICOLON() { return getToken(JavaplusplusParser.SEMICOLON, 0); }
		public TerminalNode EBRACKET() { return getToken(JavaplusplusParser.EBRACKET, 0); }
		public TerminalNode C_SBRACKET() { return getToken(JavaplusplusParser.C_SBRACKET, 0); }
		public TerminalNode C_EBRACKET() { return getToken(JavaplusplusParser.C_EBRACKET, 0); }
		public List<TerminalNode> INT() { return getTokens(JavaplusplusParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(JavaplusplusParser.INT, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> AND_OR() { return getTokens(JavaplusplusParser.AND_OR); }
		public TerminalNode AND_OR(int i) {
			return getToken(JavaplusplusParser.AND_OR, i);
		}
		public LoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaplusplusListener ) ((JavaplusplusListener)listener).enterLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaplusplusListener ) ((JavaplusplusListener)listener).exitLoop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaplusplusVisitor ) return ((JavaplusplusVisitor<? extends T>)visitor).visitLoop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoopContext loop() throws RecognitionException {
		LoopContext _localctx = new LoopContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_loop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(T__2);
			setState(190);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
			case 1:
				{
				setState(137);
				match(SBRACKET);
				setState(138);
				variable_init();
				setState(139);
				var_name();
				setState(140);
				match(COMPARATORS);
				setState(143);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case STRING:
					{
					setState(141);
					var_name();
					}
					break;
				case INT:
					{
					setState(142);
					match(INT);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(145);
				match(SEMICOLON);
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==STRING) {
					{
					setState(146);
					var_name();
					setState(147);
					match(T__3);
					}
				}

				setState(151);
				match(EBRACKET);
				setState(152);
				match(C_SBRACKET);
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__4) | (1L << T__5) | (1L << T__7) | (1L << T__8) | (1L << VAR_TYPE) | (1L << STRING))) != 0)) {
					{
					{
					setState(153);
					expression();
					}
					}
					setState(158);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(159);
				match(C_EBRACKET);
				}
				break;
			case 2:
				{
				setState(161);
				match(SBRACKET);
				setState(162);
				var_name();
				setState(163);
				match(COMPARATORS);
				setState(166);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case STRING:
					{
					setState(164);
					var_name();
					}
					break;
				case INT:
					{
					setState(165);
					match(INT);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==AND_OR) {
					{
					{
					setState(168);
					match(AND_OR);
					setState(169);
					var_name();
					setState(170);
					match(COMPARATORS);
					setState(173);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case STRING:
						{
						setState(171);
						var_name();
						}
						break;
					case INT:
						{
						setState(172);
						match(INT);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					}
					setState(179);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(180);
				match(EBRACKET);
				setState(181);
				match(C_SBRACKET);
				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__4) | (1L << T__5) | (1L << T__7) | (1L << T__8) | (1L << VAR_TYPE) | (1L << STRING))) != 0)) {
					{
					{
					setState(182);
					expression();
					}
					}
					setState(187);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(188);
				match(C_EBRACKET);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public TerminalNode SBRACKET() { return getToken(JavaplusplusParser.SBRACKET, 0); }
		public TerminalNode EBRACKET() { return getToken(JavaplusplusParser.EBRACKET, 0); }
		public TerminalNode SEMICOLON() { return getToken(JavaplusplusParser.SEMICOLON, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public Function_call_methodContext function_call_method() {
			return getRuleContext(Function_call_methodContext.class,0);
		}
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaplusplusListener ) ((JavaplusplusListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaplusplusListener ) ((JavaplusplusListener)listener).exitPrint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaplusplusVisitor ) return ((JavaplusplusVisitor<? extends T>)visitor).visitPrint(this);
			else return visitor.visitChildren(this);
		}
	}
